--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Wrapper -->
     <div class="wrapper">
-      <h1>Weather App</h1>
+      <h1>SkyCast</h1>
       <div class="tabContainer">
         <p class="tab currentTab" data-userWeather>Your Weather</p>
         <p class="tab" data-searchWeather>Search Weather</p>
